Kubernetes-minikube/kubernetes-minikube-scripts/03-Postgresql-Db-Service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgresql-db-service
  labels: 
    db.app: postgresql-db
spec:
  type: NodePort
  selector:
    db.app: postgresql-db
  ports: 
    - port: 5432
      targetPort: 5432
